{
    "name": "InputActions",
    "maps": [
        {
            "name": "ActionMap",
            "id": "da6262ea-8821-4f19-bf24-82cbe4d134e9",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "6fd7d1aa-c0c8-4e87-adb0-1f9da14063aa",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "WASD Vector2",
                    "id": "6d6f6b89-aa5b-4d4e-9bac-7011b72fcb7c",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "5e6822ea-2617-499c-92bf-b14abe890865",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "0b0ebba8-1ecc-4dbc-9fd7-2194acff0284",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "8f07a1c7-1ff5-49c8-9bec-64ab5ddc99bf",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "bce15581-742b-4396-9e9d-9f7067b5de2a",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}